--- a/001.HTML학습/00.first_PJ/info.html
+++ b/001.HTML학습/00.first_PJ/info.html
@@ -6,15 +6,27 @@
     1. head - 웹문서 기본셋팅값
         (metatag-문서정보, 문자셋 등, 타이틀태그)
     2. body - 웹 페이지 출력되는 본문
+
+
+    [vscode에는 에밋이 기본설치 되어있다!]
+    -> 에밋이 뭐지? 약자로 코딩을 짧고 쉽게 하도록 도와주는 도구
+    -> 예전에는 젠코딩이라고 불렀다!
+    -> HTML, CSS 모두에 적용됨
+    -> 단축키를 지정해서 사용하면 편리하다!
+    -> 단축키 지정 : ctrl + K + S (키셋설정!)
+    -> 3가지 단축키 지정
+       1) 태그 랩핑 : ctrl + alt + a
+       2) 태그 삭제 : ctrl + alt + r
+       3) 태그 변경 : ctrl + alt + u
  -->
 
 <html>
-    <head>
+    <b>
         <meta charset="utf-8">
         <!-- 메타 utf-8은 한글, 일본어 등 2byte문자열 안깨짐 설정 -->
         <title>기본전달사항</title>
         <!-- title: 탭메뉴에 출력되는 문자 -->
-    </head>
+    </b>
     <body>
     
 <h1>[ 프로젝트기반 프론트엔드 과정 2022 - 기본전달사항 ]</h1>
@@ -25,7 +37,9 @@
 <h2>2. 평가: 3회차의 프로젝트 산출물</h2>
 
 <h2>3. 공식교과서: w3c 스쿨</h2>
-<a href="https://www.w3schools.com/" target="_blank">https://www.w3schools.com/</a>
+<a href="https://www.w3schools.com/" target="_blank">
+    <b>https://www.w3schools.com/</b>   
+</a>
 
 <h2>4. 소스 빌드용 폴더 생성하기!</h2>
 
