--- a/001.HTML학습/01.info_PJ/index.html
+++ b/001.HTML학습/01.info_PJ/index.html
@@ -10,10 +10,93 @@
         <meta charset="utf-8" />
         <!-- title: 탭에 표시 타이틀 -->
         <title>네이버 요약뉴스</title>
+        <!-- 인터널 스타일시트 요소 -->
+        <style>
+            /* 
+            [스타일시트 문법 영역! 기본문법]
+
+            선택자{
+                속성:값;
+            }
+
+            [css 박스모델]
+            -> 모든요소는 박스형태로 그 디자인을 설정한다!
+            -> 5가지 속성을 셋팅한다!
+            1. width : 가로크기
+            2. height : 세로크기
+            3. padding : 안쪽여백
+            4. border : 경계선
+            5. margin : 바깥여백
+
+            -> 박스모델의 적용은 블록요소를 기본으로 한다!
+
+            [css 선택자 (Selector)]
+            1. 타입선택자 : 요소명으로 선택
+            예) h1{}, div{}, a{}
+            2. id 선택자 : #
+            예) #my{}
+            3. class 선택자 : .
+            예) .my{}
+            4. 종속선택자 : 요소명#id명 / 요소명.클래스명
+            요소명#아이디명.클래스명
+            예)div#my{} -> div요소인데 아이디가 my이다
+            예)a.my -> a요소인데 클래스가 my이다
+            -> 기본적으로 종속선택자는 요소분석기에 사용
+            -> 특정요소에 특정이름을 밝혀야 할 경우
+            -> 클래스적용시 같은 이름으로 다른 디자인을 줄때
+            예) div.on{} header.on{} -> 같은 클래스인데 다른 디자인 적용가능
+
+            5. 그룹선택자 : ,(콤마)
+             */
+             /* 기본마진 패딩 없애기 */
+             html,body{
+                margin: 0;
+                padding: 0;
+                /* 실제는 body에만 마진 8px이 있지만 사용자가 별도로 적용한 마진 등 초기화할때 한꺼번에 최상위 요소인 html, body를 마진,패딩 초기화값 0으로 셋팅한다 */
+             }
+             /* 박스공통 클래스 .bx*/
+             .bx{
+                /* 1 가로크기 w 
+                아무값도 안쓰면? auto인데... 블록은 부모요소 끝까지 차지*/
+                width: 750px;
+                /* 2 세로크기 h 
+                아무값도 안쓰면 auto인데... 블록은 내용만큼 늘어남*/
+                /* height: 150px; */
+                /* 3 경계선(보더) bd
+                border: 두께 종류 색상
+                - border-width: 두께
+                - border-style: 종류
+                - border-color: 색상
+                https://www.w3schools.com/css/css_border.asp*/
+                border: 5px double #2c23b3;
+                /* 둥근 모서리 보더 brad : border-radius */
+                /* border-radius: 50%; */
+                border-radius: 20px;
+
+                /* 4 안쪽여백(패딩) p
+                padding : 1개 (4방향)
+                padding : 1개 2개 (위아래양쪽) 
+                padding : 1개 2개 3개 (위 양쪽 아래) 
+                padding : 1개 2개 3개 4개(각 방향: 위 오른 아래 왼) 
+                ->>> 마진도 동일함*/
+                
+                padding: 20px;
+                /* padding: 20px 50px 80px 5px; */
+                /* 5 바깥여백(마진) m */
+                /* margin: 30px; */
+                /* 마진탑 덮어쓰기 mt */
+                margin-top: 30px;
+                /* 
+                  마영오씨가 누구지?
+                  - 일반적인 블록요소가 가로크기를 가질때 이를 중앙정렬하려면 양쪽 마진을 auto로 설정한다. 이때 위아래 0 양쪽 auto를 줄여서 마영오! 라고함
+                */
+
+             }
+        </style>
     </head>
     <body>
         <!-- 1.상단영역 -->
-        <header>
+        <header class="top bx">
             <!-- 1-1.제목 -->
             <h1>네이버 요약 뉴스</h1>
             <!-- 1-2. GNB메뉴 -->
@@ -24,20 +107,22 @@
                     <img
                         src="images/logo.png"
                         alt="네이버로고"
-                        style="width: 20px"
+                        style="width: 20px;"
                     />
                 </a>
-                <a href="">정치</a> | <a href="">경제</a> |
-                <a href="">사회</a> | <a href="">IT/과학</a> |
+                <a href="">정치</a> | 
+                <a href="">경제</a> | 
+                <a href="">사회</a> | 
+                <a href="">IT/과학</a> | 
                 <a href="">TV/연예</a>
             </nav>
         </header>
         <!-- 2.메인영역 -->
-        <main>
-            <img src="images/main.jpg" alt="뉴스메인이미지" />
+        <main class="cont bx">
+            <img src="images/main.jpg" alt="뉴스메인이미지" style="width : 400px;">
         </main>
         <!-- 3.하단영역 -->
-        <footer>
+        <footer class="info bx">
             <!-- 주소블록요소 -->
             <address>
                 서울시 강남구 역삼동 119 대호B 8F <br>
