오타 수정 및 복습

--- a/001.HTML학습/01.info_PJ/index.html
+++ b/001.HTML학습/01.info_PJ/index.html
@@ -173,7 +173,7 @@
             -> 맨위, 맨 왼쪽 라인
 
             [내용구분을 위한 div의 형제들]
-            1. 블록태그릥 대명사 : div(divide/division)
+            1. 블록태그의 대명사 : div(divide/division)
             -> 내용의 별도 구분없이 마구 사용됨
             -> 의미를 가지는 div형제들이 등장
 
@@ -196,10 +196,10 @@
              -> 공통특징:
              1) 여러번사용가능
              -> 다른 태그에서 같은 클래스 사용가능
-             
              2) 여러개 사용
              -> 한 태그에서 다른 클래스를 다중적용 가능
              -> 다중사용시 띄어쓰기로 구분함
+             
              [웹표준이란?]
              - 모든 웹표준 브라우저에서 하나의 소스로 동일한 디스플레이 및 기능이 되도록 정한 웹코딩의 표준안
              [웹접근성이란?]
