--- a/001.HTML학습/01.info_PJ/index.html
+++ b/001.HTML학습/01.info_PJ/index.html
@@ -8,10 +8,18 @@
         />
         <!-- meta: charset 필수 인코딩설정 -->
         <meta charset="utf-8" />
+
         <!-- title: 탭에 표시 타이틀 -->
         <title>네이버 요약뉴스</title>
         <!-- 인터널 스타일시트 요소 -->
         <style>
+            /* 웹폰트 CDN */
+            @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang&family=Gugi&family=Single+Day&display=swap');
+            /* 
+            내용:font-family: 'Gowun Batang', serif;
+            타이틀:font-family: 'Gugi', cursive;
+            메뉴:font-family: 'Single Day', cursive; */
+
             /* 
             [스타일시트 문법 영역! 기본문법]
 
@@ -49,6 +57,9 @@
             예) h1,div,a {}
             6. 자손선택자 : 띄어쓰기
             예) div a {} -> div 하위의 모든 a요소들
+            7. 직계자식 선택자 : > (왼쪽꺾쇠)
+            예) header>a{} ->header 바로아래 a 요소
+
              */
              /* 기본마진 패딩 없애기 */
              html,body{
@@ -98,9 +109,47 @@
                 .top{
                     /* 배경색: bgc
                     background-color */
-                    background-color: lightskyblue;
+                    background-color: #b4e5f8;
                     /* 글자중앙정렬 */
                     text-align: center;
+                }
+                
+                /* 타이틀 */
+                .top>h1{
+                    /* 1. 글자 스타일 : font-style fs*/
+                    /* font-style: normal; */
+                       /*  font-style: italic; */
+                    /* 2. 글자두께 fw:
+                        font-weitght
+                        normal : 두께없음
+                        bold : 두껍게*/
+                        font-weight: normal;
+                    /* 3. 글자크기 fz :
+                        font-size : 50px;
+                        글자단위 : pt, px, em, rem, vw, vh*/
+                        font-size : 50px;
+                    /* 4. 글자줄간격 : 
+                        line-height 
+                        (글이 여러줄일때 사이간격용 또는 글자박스에서 세로중앙정렬시)
+                        - 단위없으면 배수*/
+                        line-height: 1.7;
+                        /* 5. 글자체 ff : 
+                        font-family 
+                        - 콤마로 여러개를 쓰면 대체체를 설정함*/
+                        font-family: 'Gugi', cursive;
+                        /* 6. 글자색 : c
+                        color - 해쉬코드/RGB/HSL/웹색상명 */
+                        color: #bb5959
+                }
+                /* GNB메뉴 */
+                #gnb a{
+                    font-family: 'Single Day', cursive;
+                    /* a요소는 기본적으로 밑줄과 글자색이 셋팅됨! 반드시 a에서 변경해야만 된다!(부모에서는 안됨) */
+                    font-size: 30px;
+                    /* 글자색 */
+                    color: rgb(141, 73, 204);
+                    /* 밑줄없앰 -text-decoration:none */
+                    text-decoration: none; /* tdn */
                 }
                 /* 2.메인영역 */
                 .cont img {
@@ -112,9 +161,17 @@
                 /* 3.하단영역 */
                 .info{
                     /* 배경색 */
-                    background-color: lightskyblue;;
+                    background-color: #b4e5f8;
                     /* 글자중앙배열 */
                     text-align: center;
+                }
+                /* 하단주소 */
+                .info address{
+                    /* address는 기본 이탤릭이므로 해제하기 */
+                    font-family: 'Gowun Batang', serif;
+                    font-style: normal;
+                    color: #333;
+                    font-size: 15px;
                 }
         </style>
     </head>
@@ -155,7 +212,7 @@
             </address>
         </footer>
 
-        <!-- 
+            <!-- 
             [첫페이지 이름이 index인 이유 : 서버에서 가장먼저 읽는 파일명이 index / default 이다]
 
             [ 요소(element) / 태그(tag) 뭐지? ]
