--- a/001.HTML학습/01.info_PJ/sub5.html
+++ b/001.HTML학습/01.info_PJ/sub5.html
@@ -10,18 +10,15 @@
         <meta charset="utf-8" />
 
         <!-- title: 탭에 표시 타이틀 -->
-        <title>네이버 요약뉴스</title>
-        <!-- 인터널 스타일시트 요소 -->
-        <!-- <style>css코드 내용</style> -->
-
-        <!-- 익스터널 스타일시트요소 -->
+        <title>네이버 요약 뉴스 - TV/연예</title>
+        <!-- 익스터널 스타일시트 요소 -->
         <link rel="stylesheet" href="./css/common.css">
     </head>
     <body>
         <!-- 1.상단영역 -->
         <header class="top bx">
             <!-- 1-1.제목 -->
-            <h1>네이버 요약 뉴스</h1>
+            <h1>네이버 요약 뉴스 - TV/연예</h1>
             <!-- 1-2. GNB메뉴 -->
             <!-- GNB(Global Navigation Bar) -->
 
@@ -42,7 +39,6 @@
         </header>
         <!-- 2.메인영역 -->
         <main class="cont bx">
-            <img src="./images/main.jpg" alt="뉴스메인이미지">
         </main>
         <!-- 3.하단영역 -->
         <footer class="info bx">
