복습, 오타수정

--- a/001.HTML학습/01.info_PJ/sub4.html
+++ b/001.HTML학습/01.info_PJ/sub4.html
@@ -44,7 +44,7 @@
                     <img src="./images/pr4.jpg" alt="newsis" />
                 </a>
                 <!-- a요소 : anchor(닻)
-                href 속성 : 이동할 페이지주소(hyper text referen)
+                href 속성 : 이동할 페이지주소(hyper text reference)
                 target 속성 : 새창일 경우 "_blank"셋팅 -->
             </div>
             <!-- 2-2. 기사제목 -->
