--- a/001.HTML학습/01.info_PJ/sub1.html
+++ b/001.HTML학습/01.info_PJ/sub1.html
@@ -68,7 +68,7 @@
 
                 <p>
                     국방과학원의 중요연구소는 “지난 15일 오전 평안북도 철산군
-                    동창리 서해 위성발사장에서 140tf(톤포스) 추진력 대출력
+                    동창리 서해 위성발사장에서 140tf(톤포스)<sub>①</sub> 추진력 대출력
                     고체연료 발동기의 첫 지상분출시험 성공적으로 진행했다”고
                     밝혔다고 16일 조선중앙통신이 보도했다.
                 </p>
@@ -96,6 +96,12 @@
                     과학적으로 엄격히 확증됐다”고 설명했다.
                 </p>
             </section>
+            <hr>
+            <article class="desc">
+                <h5>주해</h5>
+                ① 킬로그램힘 또는 킬로그램중 또는 킬로그램포스는 지구의 표준중력가속도에서 1kg의 질량을 가진 물체가 가지는 힘이다. 무게의 단위로 킬로그램힘을 사용하지만 지구에서는 편의상 '힘'을 생략하고 질량의 단위인 킬로그램으로 무게를 표시한다.
+            </article>
+                <hr>
             <!-- 2-5. 기자정보 -->
             <div class="rpt">권남영 기자(kwonny@kmib.co.kr)</div>
             <!-- 2-6. 기사원문 -->
