--- a/001.HTML학습/01.info_PJ/sub3.html
+++ b/001.HTML학습/01.info_PJ/sub3.html
@@ -68,7 +68,7 @@
             <section class="arti">
                 <p>
                     대구시청 신청사 건립 사업이 전면 중단(매일신문 12월 15일
-                    보도)된 것과 관련, 대구공무원노동조합(이하 대공노)이 성명을
+                    보도)된 것과 관련, 대구공무원노동조합<sup>①</sup>(이하 대공노)이 성명을
                     내고 빠른 대책과 신청사 건립 방안 마련을 촉구했다.
                 </p>
 
@@ -101,6 +101,12 @@
                     어이없는 노릇"이라고 강조했다.
                 </p>
             </section>
+            <hr>
+            <article class="desc">
+                <h5>주해</h5>
+                ① 대구공무원노동조합 : 대공노
+            </article>
+            <hr>
             <!-- 2-5. 기자정보 -->
             <div class="rpt">
                 장성현 기자 shjang@imaeil.com
