--- a/001.HTML학습/01.info_PJ/sub5.html
+++ b/001.HTML학습/01.info_PJ/sub5.html
@@ -67,7 +67,7 @@
             <!-- 2-4. 기사내용 -->
             <section class="arti">
                 <p>
-                    하슬은 15일 이달의 소녀 공식 팬 카페에 '안녕하세요 이달의
+                    하슬<sup>①</sup>은 15일 이달의 소녀 공식 팬 카페에 '안녕하세요 이달의
                     소녀 하슬입니다'라는 제목의 글을 올렸다.
                 </p>
 
@@ -112,7 +112,13 @@
                     츄가 빠지고 11인조로 재정비한 이달의 소녀는 오는 1월 3일
                     'ZERO'로 컴백한다.
                 </p>
+                <hr>
             </section>
+            <article class="desc">
+                <h5>주해</h5>
+                ① 하슬 : 이달의 소녀 멤버
+            </article>
+            <hr>
             <!-- 2-5. 기자정보 -->
             <div class="rpt">
                 성민주(smj@tvreport.co.kr)
