--- a/001.HTML학습/01.info_PJ/sub2.html
+++ b/001.HTML학습/01.info_PJ/sub2.html
@@ -69,7 +69,7 @@
                 <p>[서울경제]</p>
 
                 <p>
-                    이창양 산업통상자원부 장관이 “올해 기준연료비 인상 요인이
+                    이창양<sup>①</sup> 산업통상자원부 장관이 “올해 기준연료비 인상 요인이
                     1kWh당 50원 정도 형성됐다”고 밝혔다. 실적연료비와
                     기후환경요금 등을 더할 경우 내년도 전기요금이 올해 대비 50%
                     가량 급등할 것이라는 전망이 나온다.
@@ -86,7 +86,7 @@
                 <p>
                     연료비 연동제 산식에 따르면 당장 내년 1월부터 기준연료비
                     인상분을 전기요금에 반영해야 한다. 기준연료비는 최근 1년치
-                    연료 가격을 바탕으로 책정되뎌 올들어 연료비가 2배 가량
+                    연료 가격을 바탕으로 책정되어 올들어 연료비가 2배 가량
                     뛰었다. 다만 정부는 이 같은 전기요금 인상분을 분기별로 나눠
                     반영하는 방안을 고민중이다. 가파른 전기요금 인상이 물가
                     상승을 자극시키고 경기 위축을 가져다 줄 수 있다는
@@ -96,6 +96,13 @@
                     피할 수 없게 될 전망이다.
                 </p>
             </section>
+            <hr>
+            <article class="desc">
+                <h5>주해</h5>
+                ① 이창양 : 산업통상자원부 장관
+            </article>
+            <br>
+            <hr>
             <!-- 2-5. 기자정보 -->
             <div class="rpt">
                 세종=양철민 기자(chopin@sedaily.com)
