--- a/001.HTML학습/01.info_PJ/sub4.html
+++ b/001.HTML학습/01.info_PJ/sub4.html
@@ -87,8 +87,10 @@
                 </p>
 
                 <p>
-                    이처럼 달 궤도 진입기동은 굉장한 고난이도의 작업이지만, 이 또한 임무 성공 가능성을 최대한 높이기
-                    위한 항우연의 계산·분석의 산물이다.
+                    항우연 수석연구원 공유씨가 이렇게 말했다. <q>
+                        이처럼 달 궤도 진입기동은 굉장한 고난이도의 작업이지만, 이 또한 임무 성공 가능성을 최대한 높이기
+                        위한 항우연의 계산·분석의 산물입니다.
+                    </q>
                 </p>
 
                 <p>
@@ -123,6 +125,16 @@
                 <br>
                 <!-- break 요소 : 인라인 줄바꿈요소 -->
                 ② 달의 반지름은 지구 반지름의 약 4분의 1이며, 질량은 지구 질량의 1/81.3이고, 달과 지구의 공통 중심은 지구 내부에 있다. 달 궤도의 반지름은 38만 4,400km이며, 이것이 달과의 평균 거리가 된다.
+            </article>
+            <hr>
+            <!-- 인용블록 영역 -->
+            <article class="qb">
+                <h5>한국항공우주연구원 소개 인용</h5>
+                <blockquote cite="https://ko.wikipedia.org/wiki/%ED%95%9C%EA%B5%AD%ED%95%AD%EA%B3%B5%EC%9A%B0%EC%A3%BC%EC%97%B0%EA%B5%AC%EC%9B%90">
+                    한국항공우주연구원(韓國航空宇宙硏究院, 영어: Korea Aerospace Research Institute, KARI), 약자로 항우연은 대전광역시 유성구 어은동에 위치하는 과학기술정보통신부 산하 항공우주 과학기술 관련 기타공공기관 재단법인이다.<br><br>
+
+                    '과학기술분야 정부출연 연구기관 등의 설립ㆍ운영 및 육성에 관한 법률'에 근거하여 1989년 10월 10일 설립되었다. 설립 목적은 우주항공기술 개발, 항공공학의 발전과 기술 개발 및 보급 등을 통한 경제 발전과 국민생활 향상이다.
+                </blockquote>
             </article>
             <hr>
             <!-- 2-5. 기자정보 -->
@@ -248,6 +260,22 @@
             - 약간윗쪽 작은글자 Superscript text
             - 주석표시숫자(숫자와 설명을 연결함)
         
+        [2. 인용관련요소]
+        1. <blockquote> 
+            - 블록요소로 별도의 인용구를 구분하는 박스
+            - 주의 : 내부에 p요소와 같은 다른 블록을 쓰면 안됨(인용내용만 적어야됨)
+            - cite속성 : 출처표시
+            (필수속성은 아니며 url주소가 들어가기 대문에 링크로 오해될 수 있으나 아님! 단순 출처정보)
+        2. <q> 
+            - 작은 인용구(쌍따옴표가 자동생성)
+            - 주의 : 인라인요소임(blockquote와 구분할 것!)
+
+        <abbr>	Defines an abbreviation or acronym
+        <address>	Defines contact information for the author/owner of a document
+        <bdo>	Defines the text direction
+        <cite>	Defines the title of a work
+
+
         [시멘틱 태그란?]
         - sementic(의미론적인, 의미있는)
         즉, 태그가 어떤 구분하는 의미가 있을 경우 시멘틱 태그라고 부른다
