--- a/001.HTML학습/01.info_PJ/sub3.html
+++ b/001.HTML학습/01.info_PJ/sub3.html
@@ -96,9 +96,11 @@
 
                 <p>
                     또한 "긴축재정으로 재정이 압박을 받는 상태에서 자산 매각없이
-                    신청사를 지을 수가 없다"면서 "아무런 재원 마련 대책도 없이
-                    자산 매각을 반대하면서 신청사를 지어 내라는 억지는 참
-                    어이없는 노릇"이라고 강조했다.
+                    신청사를 지을 수가 없다"면서 "<strong>
+                        아무런 재원 마련 대책도 없이
+                        자산 매각을 반대하면서 신청사를 지어 내라는 억지는 참
+                        어이없는 노릇
+                    </strong>"이라고 강조했다.
                 </p>
             </section>
             <hr>
@@ -109,7 +111,11 @@
             <hr>
             <!-- 2-5. 기자정보 -->
             <div class="rpt">
-                장성현 기자 shjang@imaeil.com
+                <address>
+                    장성현 기자 shjang@imaeil.com<br>
+                    010-1234-5678
+                </address>
+                
             </div>
             <!-- 2-6. 기사원문 -->
             <h5>
