--- a/001.HTML학습/01.info_PJ/sub1.html
+++ b/001.HTML학습/01.info_PJ/sub1.html
@@ -68,13 +68,15 @@
 
                 <p>
                     국방과학원의 중요연구소는 “지난 15일 오전 평안북도 철산군
-                    동창리 서해 위성발사장에서 140tf(톤포스)<sub>①</sub> 추진력 대출력
-                    고체연료 발동기의 첫 지상분출시험 성공적으로 진행했다”고
-                    밝혔다고 16일 조선중앙통신이 보도했다.
+                    동창리 서해 위성발사장에서 140tf(톤포스)<sup>①</sup> 추진력 대출력
+                    <q>
+                        고체연료 발동기의 첫 지상분출시험 성공적으로 진행했다”고
+                        밝혔다고 16일 조선중앙통신이 보도했다.
+                    </q>
                 </p>
 
                 <p>
-                    김정은 국무위원장이 현지에서 중대시험을 지도했으며, 조용원
+                    <mark>김정은 국무위원장<del>돼지</del>이 현지에서 중대시험을 지도했으며</mark>, <ins>조용원</ins>
                     조선로동당 중앙위원회 비서와 김정식 조선로동당 중앙위원회
                     부부장이 수행했다.
                 </p>
