--- a/001.HTML학습/01.info_PJ/sub5.html
+++ b/001.HTML학습/01.info_PJ/sub5.html
@@ -67,20 +67,26 @@
             <!-- 2-4. 기사내용 -->
             <section class="arti">
                 <p>
-                    하슬<sup>①</sup>은 15일 이달의 소녀 공식 팬 카페에 '안녕하세요 이달의
-                    소녀 하슬입니다'라는 제목의 글을 올렸다.
+                    하슬<sup>①</sup>은 15일 이달의 소녀 공식 팬 카페에 <q>
+                        안녕하세요 이달의
+                        소녀 하슬입니다
+                    </q>라는 제목의 글을 올렸다.
                 </p>
 
                 <p>
-                    이 글에서 하슬은 "벌써 6년이라는 시간이 흘렀다"라면서 "항상
-                    오빛(팬덤명)들에게 큰 힘이 되었으면 좋겠는데 갈수록 저는 제
-                    부족함만 보이는 것 같다"라고 전했다.
+                    이 글에서 하슬은 "벌써 6년이라는 시간이 흘렀다"라면서 <strong>
+                        "항상
+                        오빛(팬덤명)들에게 큰 힘이 되었으면 좋겠는데 갈수록 저는 제
+                        부족함만 보이는 것 같다"
+                    </strong>라고 전했다.
                 </p>
 
                 <p>
                     "이런 부족함까지 사랑으로 감싸주는 오빛들이 너무 고맙고
-                    미안하다"고 밝힌 하슬은 "더 이상 무슨 말을 해야 할지
-                    모르겠다"라고 적어 눈길을 끌었다.
+                    미안하다"고 밝힌 하슬은 "<del>
+                        더 이상 무슨 말을 해야 할지
+                        모르겠다
+                    </del>"라고 적어 눈길을 끌었다.
                 </p>
 
                 <p>
@@ -95,8 +101,14 @@
                 </p>
 
                 <p>
-                    이달의 소녀 소속사 블록베리크리에이티브는 지난달 "츄를
-                    이달의 소녀 멤버에서 제명하고 퇴출하기로 했다"고 공지했다.
+                    이달의 소녀 소속사 블록베리크리에이티브는 지난달 <em>
+                        <strong>
+                            <blockquote cite="http://www.naver.com">
+                                "츄를
+                                이달의 소녀 멤버에서 제명하고 퇴출하기로 했다"
+                            </blockquote>
+                        </strong>
+                    </em>고 공지했다.
                     사유는 스태프들을 향한 폭언과 갑질이다. 이에 대해 츄는
                     자신의 인스타그램을 통해 "팬분들에게 부끄러울 만한 일은 한
                     적이 없다"고 블록베리 측 주장에 반박했다.
