--- a/002.CSS학습/002.블록과인라인2.html
+++ b/002.CSS학습/002.블록과인라인2.html
@@ -65,6 +65,8 @@
                 [프리셋팅이 없는 순수 블록요소 대표: div]
                 -> 과거에는 div가 남발되었으나 html5에서 시멘틱 태그의 등장으로 의미적인 구분에 의해 다양하게 사용되고 있다!
 
+                
+
                 _________________________________________________
 
             2. inline요소
@@ -97,6 +99,10 @@
                 [display를 숨기는 방법]
                 display: none;
                 -> tag는 그대로 있는데 화면에 출력안됨!
+
+                [프리셋팅이 없는 순수 인라인요소 대표: span]
+                -> 인라인요소에 새로운 디자인/기능을 추가할 때 흔히 많이 사용된다!
+                -> span은 '범위'라는 뜻의 영단어
 
                 ______________________________________________
 
