--- a/001.HTML학습/01.info_PJ/sub4.html
+++ b/001.HTML학습/01.info_PJ/sub4.html
@@ -9,7 +9,7 @@
         <!-- title: 탭에 표시 타이틀 -->
         <title>네이버 요약 뉴스 - IT/과학</title>
         <!-- 익스터널 스타일시트 요소 -->
-        <link rel="stylesheet" href="./css/common.css" />
+        <!-- common.css는 웹요청을 줄이기 위해 sub.css에서 import한다!  -->
         <link rel="stylesheet" href="./css/sub.css" />
     </head>
     <body>
