--- a/001.HTML학습/01.info_PJ/sub4.html
+++ b/001.HTML학습/01.info_PJ/sub4.html
@@ -76,7 +76,7 @@
 
                 <p>
                     1차 진입기동에서 다누리는 약 13분간 추력기를 가동해 시속 8000㎞에서 시속 7500㎞까지 속도를 줄이고,
-                    총알의 속도인 시속 3600㎞로 이동 중인 달 궤도에 진입하는 것을 목표로 한다. 이같은 1차 진입기동의
+                    <mark>총알의 속도인 시속 3600㎞로 이동 중인<br> 달 궤도에 진입하는 것을 목표로 한다.</mark> 이같은 1차 진입기동의
                     결과는 데이터 분석 과정을 거쳐 오는 19일 도출될 예정이다.
                 </p>
 
@@ -107,8 +107,8 @@
                 <p>
                     당초 항우연은 다누리를 달까지 약 1~2개월이 소요되는 <abbr title="위상전이궤적">'위적'</abbr> 방식을 사용하려 했으나 준비
                     과정에서 다누리 설계 중량이 늘어나면서 불가피하게 속도가 더 느리고 연료를 더 적게 소모하는 BLT
-                    궤적으로 방식을 바꾸게 됐다.<mark>다누리의 속도가 더 느린 BLT 궤적을 선택했음에도 이처럼 고난이도의 진입
-                    기동 절차가 <ins>아직도 많이</ins> 남은 셈이다.</mark> <del>정말로 대단하다! 우리나라 자랑스러워~~!</del>
+                    궤적으로 방식을 바꾸게 됐다.다누리의 속도가 더 느린 BLT 궤적을 선택했음에도 이처럼 고난이도의 진입
+                    기동 절차가 <ins>아직도 많이</ins> 남은 셈이다. <del>정말로 대단하다! 우리나라 자랑스러워~~!</del>
                     <bdo dir="rtl">우리나라대한민국만세</bdo>
                 </p>
                 <!-- 
