--- a/001.HTML학습/01.info_PJ/sub4.html
+++ b/001.HTML학습/01.info_PJ/sub4.html
@@ -119,15 +119,17 @@
             </section>
             
             <!-- 구분선: hr -->
-            <hr>
+            <!-- <hr> -->
             <article class="desc">
                 <h5>주해</h5>
-                ① 다누리는 한국항공우주연구원이 개발하여 2022년 8월 5일에 발사한 대한민국 최초의 달 궤도 탐사선이다. 달 궤도를 돌며 달을 탐사하는 것을 목표로 한다. 성공한다면 대한민국은 세계 7번째 달 탐사국[5] 반열에 오른다.
-                <br>
-                <!-- break 요소 : 인라인 줄바꿈요소 -->
-                ② 달의 반지름은 지구 반지름의 약 4분의 1이며, 질량은 지구 질량의 1/81.3이고, 달과 지구의 공통 중심은 지구 내부에 있다. 달 궤도의 반지름은 38만 4,400km이며, 이것이 달과의 평균 거리가 된다.
+                <div>
+                    ① 다누리는 한국항공우주연구원이 개발하여 2022년 8월 5일에 발사한 대한민국 최초의 달 궤도 탐사선이다. 달 궤도를 돌며 달을 탐사하는 것을 목표로 한다. 성공한다면 대한민국은 세계 7번째 달 탐사국[5] 반열에 오른다.
+                    <br>
+                    <!-- break 요소 : 인라인 줄바꿈요소 -->
+                    ② 달의 반지름은 지구 반지름의 약 4분의 1이며, 질량은 지구 질량의 1/81.3이고, 달과 지구의 공통 중심은 지구 내부에 있다. 달 궤도의 반지름은 38만 4,400km이며, 이것이 달과의 평균 거리가 된다.
+                </div>
             </article>
-            <hr>
+            <!-- <hr> -->
             <!-- 인용블록 영역 -->
             <article class="qb">
                 <h5>한국항공우주연구원 소개 인용</h5>
@@ -137,7 +139,7 @@
                     '과학기술분야 정부출연 연구기관 등의 설립ㆍ운영 및 육성에 관한 법률'에 근거하여 1989년 10월 10일 설립되었다. 설립 목적은 우주항공기술 개발, 항공공학의 발전과 기술 개발 및 보급 등을 통한 경제 발전과 국민생활 향상이다.
                 </blockquote>
             </article>
-            <hr>
+            <!-- <hr> -->
             <!-- 2-5. 기자정보 -->
             <div class="rpt">운현성 기자</div>
             <!-- 2-6. 기사원문 -->
@@ -145,7 +147,7 @@
                 <a href="https://n.news.naver.com/mnews/article/003/0011594397?sid=105" target="_blank"> 기사원문 </a>
             </h5>
 
-            <hr>
+            <!-- <hr> -->
 
             <!-- 오늘의 작품 & 느낌 -->
             <article class="work">
