--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/index.html
@@ -10,24 +10,44 @@
         <!-- meta keywords 사이트 키워드  -->
     <meta name="keywords" content="도깨비, 도깨비,공유,김은숙,김고은,이동욱,유인나,육성재,금토드라마" />
     <title>도깨비PJ - 메인페이지</title>
+    <!-- 외부css불러오기(main.css만) -->
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <!-- 1. 상단영역 -->
     <div id="top">
-        <header class="top">
+        <header class="top ibx">
 
         </header>
     </div>
     <!-- 2. 메인영역 -->
     <div id="cont">
-        <main class="cont">
-
+        <main class="cont ibx">
+            <!-- 전체 캐릭터 박스 : .cbx-->
+            <div class="cbx">
+                <!-- 1.공유 : .cat-->
+                <section class="cat">
+                    <img src="./images/dc1.png" alt="공유">
+                </section>
+                <!-- 2.김고은 : .cat-->
+                <section class="cat">
+                    <img src="./images/dc2.png" alt="김고은">
+                </section>
+                <!-- 3.이동욱 : .cat-->
+                <section class="cat">
+                    <img src="./images/dc3.png" alt="이동욱">
+                </section>
+                <!-- 4.유인나 : .cat-->
+                <section class="cat">
+                    <img src="./images/dc4.png" alt="유인나">
+                </section>
+            </div>
         </main>
     </div>
     <!-- 3. 하단영역 -->
     <div id="info">
-        <footer class="info">
-            
+        <footer class="info ibx">
+
         </footer>
     </div>
 </body>
