--- a/002.CSS학습/011.인라인플롯.html
+++ b/002.CSS학습/011.인라인플롯.html
@@ -21,7 +21,7 @@
 
         /* 박스공통 */
         .bx {
-            max-width: 800px;
+            width: 800px;
             /* max-width: 100%; */
             /* 박스크기 보다 화면이 작아지면 100%로 전환 */
             margin: 0 auto;
@@ -49,7 +49,7 @@
         /* 캐릭터 이미지 */
         .bx img {
             width: 50%;
-            margin: 1.9%;
+            margin: 2%;
         }
 
         /* 
