--- a/808.복습/01.적용/복습.html
+++ b/808.복습/01.적용/복습.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>MEGA</title>
+    <link rel="stylesheet" href="복습css.css">
 </head>
 <body>
     <div class="cont">
+        <!-- 1. 상단영역 -->
         <div class="head_wrap">
             <div class="menu">
                 <a href="">메가스토리</a>
@@ -15,14 +17,17 @@
                 <a href="">메가소식</a>
             </div>
         </div>
+        <!-- 2. 메인영역 -->
         <div class="wrap">
             <div class="nav">
-                <ul>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                </ul>
+                <div class="side_bar">
+                    <ul>
+                        <li><a href="#"></a>창업상담</li>
+                        <li><a href="#"></a>고객센터</li>
+                        <li><a href="#"></a>고객센터</li>
+                        <li><a href="#"></a>(22.12.15)누적</li>
+                    </ul>
+                </div>
             </div>
             <div class="chap_list">
                 <ul>
@@ -50,5 +55,6 @@
             </div>
         </div>
     </div>
+
 </body>
 </html>
