--- a/002.CSS학습/01.Position/01.static.html
+++ b/002.CSS학습/01.Position/01.static.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>01. static 포지션</title>
@@ -29,7 +29,7 @@
                 [  CSS의 포지션이 뭐지?  ]
                 - 위치를 효과적으로 배치하기 위한 코딩법을 제공하는 속성
 
-                [  1.statci 포지션  ]
+                [  1.static 포지션  ]
                 1. 설정하지 않아도 기본값
                 2. 위치이동속성(top,left,bottom,right)이 적용되지 않는다!
                 3. 위치이동은 margin을 사용함!
