--- a/808.복습/01.적용/복습.html
+++ b/808.복습/01.적용/복습.html
@@ -19,6 +19,12 @@
         </div>
         <!-- 2. 메인영역 -->
         <div class="wrap">
+            <!-- <div class="jb-box">
+                <video muted autoplay loop>
+                  <source src="../03.자료/연습용video.mp4" type="video/mp4">
+                  <strong>Your browser does not support the video tag.</strong>
+                </video>
+            </div> -->
             <div class="nav">
                 <div class="side_bar">
                     <ul>
