--- a/808.복습/01.적용/복습.html
+++ b/808.복습/01.적용/복습.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="복습css.css">
 </head>
 <body>
+    <video autoplay muted loop id="myVideo">
+        <source src="../03.자료/연습용video.mp4" type="video/mp4">
+      </video>
+      
     <div class="cont">
         <!-- 1. 상단영역 -->
         <div class="head_wrap">
@@ -18,6 +22,7 @@
             </div>
         </div>
         <!-- 2. 메인영역 -->
+        
         <div class="wrap">
             <!-- <div class="jb-box">
                 <video muted autoplay loop>
