--- a/002.CSS학습/01.Position/03.absolute.html
+++ b/002.CSS학습/01.Position/03.absolute.html
@@ -59,7 +59,7 @@
             [-> 앱솔루트 판타롱스타킹]
 
             3. 블록이 아닌요소에 앱솔루트를 준 경우
-            자동으로 diplay:block로 설정됨!
+            자동으로 display:block로 설정됨!
             이유는 자동크기를 설정할 경우 블록이 아니면 크기설정이 안되므로 자동전환된다!
             -> 일반적으로 모든 앱솔루트는 block이다!
 
