--- a/808.복습/01.적용/복습.html
+++ b/808.복습/01.적용/복습.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <video autoplay muted loop id="myVideo">
-        <source src="../03.자료/연습용video.mp4" type="video/mp4">
+        <source src="../03.자료/메가커피.mp4" type="video/mp4">
       </video>
       
     <div class="cont">
