--- a/002.CSS학습/01.Position/03.absolute.html
+++ b/002.CSS학습/01.Position/03.absolute.html
@@ -75,7 +75,7 @@
             그래서 마진도 margin-top, margin-left만 적용된다!
 
             5. 위치 이동값의 초기화!
-            - 값으로 auto를 쓰면 된다1
+            - 값으로 auto를 쓰면 된다!
             예) top: auto
             -> 언제 초기화 하나?
             기존에 이미 설정된 하나의 위치값을 반대방향으로 위치값 변경시에 초기화를 사용한다!
